--- a/templates/docs.html
+++ b/templates/docs.html
@@ -4,98 +4,166 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Documentation</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            text-align: left;
-            padding: 30px;
-            max-width: 800px;
-            margin: 0 auto;
-        }
+    <title>ayoubgharts | Documentation</title>
 
-        h1, h2 {
-            color: #007bff;
-        }
+    <!--? FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        p, ul {
-            font-size: 1.1em;
-            line-height: 1.6;
-        }
+    <!--? Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-        .code {
-            background-color: #e9ecef;
-            padding: 10px;
-            border-radius: 5px;
-            font-family: monospace;
-        }
-
-        .endpoint {
-            font-weight: bold;
-            color: #333;
-        }
-
-        .button {
-            display: inline-block;
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 20px;
-        }
-
-        .button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <!--? Custom CSS -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
 </head>
 
 <body>
-    <h1>API Documentation</h1>
 
-    <p>Welcome to the API documentation. This guide provides all the necessary information on how to interact with the API.</p>
-
-    <h2>Base URL</h2>
-    <p>All requests should be made to the following base URL:</p>
-    <div class="code">http://127.0.0.1:5000</div>
-
-    <h2>Endpoints</h2>
-    <ul>
-        <li>
-            <span class="endpoint">GET /api/items</span>
-            <p>Retrieve a list of all available items.</p>
-        </li>
-        <li>
-            <span class="endpoint">GET /api/items/&lt;id&gt;</span>
-            <p>Retrieve the details of a specific item by its ID. Replace <code>&lt;id&gt;</code> with the actual ID (e.g., <code>/api/items/age</code>).</p>
-        </li>
-        <li>
-            <span class="endpoint">POST /api/items</span>
-            <p>Add a new item to the list. The request body should be in JSON format and include an <code>id</code> field (string) and other key-value pairs.</p>
-            <div class="code">
-                Example JSON request body: <br>
-                {<br>
-                &nbsp;&nbsp;"id": "new_id",<br>
-                &nbsp;&nbsp;"Name": "New Item Name"<br>
-                }
+    <!--? Header -->
+    <header>
+        <nav class="navbar navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">ayoubgharts API</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                    aria-labelledby="offcanvasDarkNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">ayoubgharts API</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/docs">Documentation</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/api/items">Items</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    All ID's
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    {% for item in items %}
+                                    <li class="">
+                                        <a href="/api/items/{{ item['id'] }}" class="dropdown-item">{{ item['id'] }}</a>
+                                    </li>
+                                    {% endfor %}
+                                </ul>
+                            </li>
+                        </ul>
+                        <form class="d-flex mt-3" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-        </li>
-    </ul>
+        </nav>
+    </header>
 
-    <h2>Response Codes</h2>
-    <ul>
-        <li><strong>200 OK</strong> - The request was successful.</li>
-        <li><strong>201 Created</strong> - A new item was successfully created.</li>
-        <li><strong>400 Bad Request</strong> - The request was invalid (e.g., missing or incorrect data).</li>
-        <li><strong>404 Not Found</strong> - The requested item was not found.</li>
-    </ul>
+    <main>
 
-    <h2>Error Handling</h2>
-    <p>If an invalid URL is accessed, the user will be redirected to a custom error page with an option to go back to the homepage.</p>
+        <div class="container">
+            <div class="docs-hero">
+                <h1>API Documentation</h1>
+                <p>
+                    Welcome to the API documentation. This guide provides all the necessary information on how to
+                    interact with
+                    the
+                    API.
+                </p>
+            </div>
 
-    <a class="button" href="/">Back to Home</a>
+            <div class="secpoint">
+                <h2>Base URL</h2>
+                <p>All requests should be made to the following base URL:</p>
+                <div class="codepoint">http://base_url</div>
+            </div>
+
+            <div class="secpoint">
+                <h2>Endpoints</h2>
+                <ul>
+                    <li>
+                        <p class="codepoint">GET /api/items</p>
+                        <p>Retrieve a list of all available items.</p>
+                    </li>
+                    <li>
+                        <p class="codepoint">GET /api/items/&lt;id&gt;</p>
+                        <p>Retrieve the details of a specific item by its ID. Replace <code>&lt;id&gt;</code> with the
+                            actual ID
+                            (e.g., <code>/api/items/age</code>).</p>
+                    </li>
+                    <li>
+                        <p class="codepoint">POST /api/items</p>
+                        <p>Add a new item to the list. The request body should be in JSON format and include an
+                            <code>id</code>
+                            field (string) and other key-value pairs.</p>
+                        <div class="codepoint">
+                            Example JSON request body: <br>
+                            {<br>
+                            &nbsp;&nbsp;"id": "new_id",<br>
+                            &nbsp;&nbsp;"Name": "New Item Name"<br>
+                            }
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+
+            <div class="secpoint">
+                <h2>Response Codes</h2>
+                <ul>
+                    <li class="codepoint mb-4"><strong>200 OK</strong> - The request was successful.</li>
+                    <li class="codepoint mb-4"><strong>201 Created</strong> - A new item was successfully created.</li>
+                    <li class="codepoint mb-4"><strong>400 Bad Request</strong> - The request was invalid (e.g., missing or incorrect data).</li>
+                    <li class="codepoint mb-4"><strong>404 Not Found</strong> - The requested item was not found.</li>
+                </ul>
+            </div>
+
+            <div class="secpoint">
+                <h2>Error Handling</h2>
+                <p class="codepoint mb-5">
+                    If an invalid URL is accessed, the user will be redirected to a custom error page with an option to go
+                    back
+                    to
+                    the homepage.
+                </p>
+    
+                <a class="buttonbackto" href="/">Back to Home</a>
+            </div>
+
+        </div>
+    </main>
+
+    <!--? Footer -->
+    <footer>
+        <div class="container">
+            <p class="mb-0">&copy; 2024 ayoubgharts API. All Rights Reserved.</p>
+            <p class="copyright">Powered by <a href="#">ayoubgharts</a></p>
+        </div>
+    </footer>
+
+
+    <!--? Bootstrap Bundle-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+        </script>
+
+    <!--? Custom JS -->
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+
+
 </body>
 
 </html>
